[gd_scene load_steps=6 format=3 uid="uid://ctqb2fwa11kp0"]

[ext_resource type="Script" path="res://mats/contents/base/charter_tamplate.gd" id="1_qiucb"]
[ext_resource type="Script" path="res://mats/boxes/hurt_box.gd" id="2_gf1i5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iu3cc"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xkv8n"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_q1cby"]
radius = 5.0

[node name="base" type="RigidBody2D"]
collision_layer = 17
collision_mask = 17
physics_material_override = SubResource("PhysicsMaterial_iu3cc")
can_sleep = false
lock_rotation = true
custom_integrator = true
contact_monitor = true
script = ExtResource("1_qiucb")

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("2_gf1i5")

[node name="col" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource("CircleShape2D_xkv8n")

[node name="Timer" type="Timer" parent="hurt_box"]

[node name="c" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q1cby")

[node name="na" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 5.0
avoidance_enabled = true

[node name="see" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 9

[connection signal="area_entered" from="hurt_box" to="hurt_box" method="_on_area_entered"]
[connection signal="area_exited" from="hurt_box" to="hurt_box" method="_on_area_exited"]
[connection signal="invi_ended" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_ended"]
[connection signal="invi_started" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_started"]
[connection signal="no_he" from="hurt_box" to="." method="delete"]
[connection signal="timeout" from="hurt_box/Timer" to="hurt_box" method="_on_Timer_timeout"]
[connection signal="velocity_computed" from="na" to="." method="move"]
